// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features > users > UsersReducer updates state according to dispatched action 1`] = `
Object {
  "hasError": false,
  "isFulfilled": true,
  "isLoading": false,
  "page": 42,
  "users": Array [
    Object {
      "a": 2,
    },
  ],
}
`;

exports[`features > users > UsersReducer updates state according to dispatched action 2`] = `
Object {
  "hasError": false,
  "isFulfilled": false,
  "isLoading": true,
  "page": 1,
  "users": undefined,
}
`;

exports[`features > users > UsersReducer updates state according to dispatched action 3`] = `
Object {
  "hasError": true,
  "isFulfilled": false,
  "isLoading": false,
  "page": 1,
  "users": undefined,
}
`;
